Multiple enhancements on details.